--- a/styles/LandingPage.css
+++ b/styles/LandingPage.css
@@ -8,7 +8,7 @@ input::-webkit-inner-spin-button {
   align-items: center;
   justify-content: space-between;
 }
-#login {
+#loginopen {
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
@@ -24,7 +24,7 @@ input::-webkit-inner-spin-button {
   width: auto;
   background: transparent;
 }
-#login:hover {
+#loginopen:hover {
   color: #fc8019;
 }
 .trip1 {
@@ -36,7 +36,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   flex-direction: column;
 }
-#signup {
+#signupopen {
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
@@ -53,7 +53,7 @@ input::-webkit-inner-spin-button {
   line-height: 40px;
   width: auto;
 }
-#signup:hover {
+#signupopen:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .attr {
@@ -268,20 +268,22 @@ footer .icons img:hover {
 .food_wrap {
   width: 110px;
   position: absolute;
-  top: 80px;
+  top: 90px;
   left: 300px;
 }
 .link_register {
   position: relative;
-  bottom: 23px;
+  /* bottom: 23px; */
   font-size: small;
   color: gray;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .link_register a {
-  text-decoration: none;
-  color: #fc8019;
-  font-weight: 600;
-  box-shadow: rgba(211, 211, 211, 0.945);
+  text-decoration: none !important;
+  color: #fc8019 !important;
+  font-weight: 600 !important;
+  box-shadow: rgba(211, 211, 211, 0.945) !important;
 }
 .hr_line_drawer {
   width: 35px;
@@ -297,12 +299,13 @@ form {
   margin-top: 50px;
 }
 .Number_input {
-  width: 350px;
+  width: 395px;
   height: 20px;
   font-size: 20px;
-  padding: 20px;
+  padding: 30px;
   outline: none;
   border: 1px solid lightgray;
+
   margin-bottom: 20px;
 }
 .Number_input_1 {
@@ -313,6 +316,7 @@ form {
   font-size: 20px;
   padding: 20px;
 }
+
 .login_btn {
   width: 395px;
   height: 50px;
@@ -342,4 +346,28 @@ form {
   border: none;
   font-weight: 600;
   border-radius: 5px;
+}
+
+.drawer {
+  transform: none;
+  transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  background-color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.87);
+  box-shadow: rgb(0 0 0 / 20%) 0px 8px 10px -5px,
+    rgb(0 0 0 / 14%) 0px 16px 24px 2px, rgb(0 0 0 / 12%) 0px 6px 30px 5px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  flex: 1 0 auto;
+  z-index: 1200;
+  position: fixed;
+  top: 0px;
+  outline: 0px;
+  right: 0px;
+}
+
+.drawer-align {
+  padding: 32px;
+  width: 500px;
 }
