--- a/styles/LandingPage.css
+++ b/styles/LandingPage.css
@@ -356,7 +356,7 @@ form {
   box-shadow: rgb(0 0 0 / 20%) 0px 8px 10px -5px,
     rgb(0 0 0 / 14%) 0px 16px 24px 2px, rgb(0 0 0 / 12%) 0px 6px 30px 5px;
   overflow-y: auto;
-  display: flex;
+  display: none;
   flex-direction: column;
   height: 100%;
   flex: 1 0 auto;
