--- a/styles/LandingPage.css
+++ b/styles/LandingPage.css
@@ -56,6 +56,24 @@ input::-webkit-inner-spin-button {
 #signupopen:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+#userbutton {
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  border: none;
+  padding: 0 2rem;
+  letter-spacing: 0;
+  color: #000;
+  background-color: #fff;
+  border: #000 solid 1px;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%);
+  font-size: 16px;
+  font-weight: 600;
+  height: 40px;
+  line-height: 40px;
+  width: auto;
+}
 .attr {
   font-size: 24px;
   font-weight: 300;
@@ -122,7 +140,7 @@ input:focus {
 }
 .posey {
   position: absolute;
-  top: 301px;
+  top: 348px;
   left: 310px;
   background-color: transparent;
   padding: 15px 10px;
@@ -370,4 +388,9 @@ form {
 .drawer-align {
   padding: 32px;
   width: 500px;
+}
+
+#logout {
+  cursor: pointer;
+  margin-left: 0.2rem;
 }
